# SHAP-rs

./: LICENSE  README.md
shap_rs/: Cargo.toml
shap_rs/src/: lib.rs
shap_rs/src/algorithms/: kernel_shap.rs  mod.rs
shap_rs/src/core/: data.rs  errors.rs  mod.rs
shap_rs/src/traits/: model.rs
shap_rs/src/utils/: mod.rs
